--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "express": "^4.19.2",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1",
+    "mongoose": "^8.4.1"
+  },
+  "devDependencies": {
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
